--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,17 @@ body {
   font-weight: bold;
   font-size: 14px;
   margin-right: 36px;
+  position: absolute;
+  top: 25%;
+  right: 3%;
+  z-index: 14;
 }
 
 .img__nav{
   margin-left: 36px;
+  position: absolute;
+  top: 30%;
+  z-index: 14;
 }
 
 .div__nav2{
@@ -67,7 +74,7 @@ body {
 .img__main2{
   position: absolute;
   top: 25%;
-  z-index: 10;
+  z-index: 8  ;
 }
 
 .img3__main2{
@@ -77,7 +84,7 @@ body {
 }
 
 .aside{
-  margin-left: 37px;
+  margin-left: 10px;
 }
 
 .section__aside{
@@ -99,7 +106,11 @@ body {
   font-family: 'Oswald';
   text-align: justify;
   width: 181px;
+  height: 154px;
   font-size: 12px;
+}
+.div__aside2{
+  margin-left: 0 ;
 }
 
 .div2__aside2{
@@ -107,7 +118,7 @@ body {
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-end;
-  margin-top: 25%;
+  margin-top: 5%;
 }
 
 .img__aside2{
@@ -155,7 +166,37 @@ body {
   grid-auto-columns: 1fr;
 }
 
+.radio__main[type=radio]{
+  background-color: gray;
+}
 
+.ul__nav3{
+  background-color: black;
+  width: 326px;
+  height: 736px;
+  position: absolute;
+  color: white;
+  top: 30%;
+  right: 10%;
+  z-index: 12;
+  font-family: 'Medula One';
+  font-size: 40px;
+  display: none;
+}
 
+.img__nav ~ .ul__nav3{
+  display: none;
+}
 
+.img__nav:hover ~ .ul__nav3{
+  display: block; 
+}
 
+.ul__nav3{
+  list-style-type: none;
+  margin-left: 36px;
+}
+
+.li__ul{
+  margin-bottom: 18px;
+}
